--- a/html/cell2.html
+++ b/html/cell2.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Main -->
     <div id="wrap">
-        <a class="backBtn" href="../index.html">
+        <a class="backBtn" href="../index.html" title="돌아가기">
             <img src="../public/back-1.svg" alt="Back">
         </a>
 
