--- a/index.html
+++ b/index.html
@@ -13,21 +13,57 @@
 
         <div class="cell-contents">
             <section class="cell-rows row1">
-                <div class="cells cell-1"></div>
-                <div class="cells cell-2"></div>
-                <div class="cells cell-3"></div>
+                <a
+                    class="cells cell-1"
+                    href="./html/cell1.html"
+                    title="1번째 기록"
+                ></a>
+                <a
+                    class="cells cell-2"
+                    href="./html/cell2.html"
+                    title="2번째 기록"
+                ></a>
+                <a
+                    class="cells cell-3"
+                    href="./html/cell3.html"
+                    title="3번째 기록"
+                ></a>
             </section>
 
             <section class="cell-rows row2">
-                <div class="cells cell-4"></div>
-                <div class="cells cell-5"></div>
-                <div class="cells cell-6"></div>
+                <a
+                    class="cells cell-4"
+                    href="./html/cell4.html"
+                    title="4번째 기록"
+                ></a>
+                <a
+                    class="cells cell-5"
+                    href="./html/cell5.html"
+                    title="5번째 기록"
+                ></a>
+                <a
+                    class="cells cell-6"
+                    href="./html/cell6.html"
+                    title="6번째 기록"
+                ></a>
             </section>
 
             <section class="cell-rows row3">
-                <div class="cells cell-7"></div>
-                <div class="cells cell-8"></div>
-                <div class="cells cell-9"></div>
+                <a
+                    class="cells cell-7"
+                    href="./html/cell7.html"
+                    title="7번째 기록"
+                ></a>
+                <a
+                    class="cells cell-8"
+                    href="./html/cell8.html"
+                    title="8번째 기록"
+                ></a>
+                <a
+                    class="cells cell-9"
+                    href="./html/cell9.html"
+                    title="9번째 기록"
+                ></a>
             </section>
         </div>
     </div>
