--- a/html/cell3.html
+++ b/html/cell3.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div id="wrap">
-        
+        <a class="backBtn" href="../index.html" title="돌아가기">
+            <img src="../public/back-1.svg" alt="Back">
+        </a>
     </div>
 </body>
 </html>
