--- a/html/cell4.html
+++ b/html/cell4.html
@@ -15,7 +15,7 @@
     <div id="wrap">
         <section class="txt">
             <h1>Best 2024 Restaurants</h1>
-            <p></p>
+            <p>Hover the Card !</p>
         </section>
 
         <section class="cards">
