--- a/index.html
+++ b/index.html
@@ -17,17 +17,32 @@
                     class="cells cell-1"
                     href="./html/cell1.html"
                     title="1번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">1th record</h3>
+                    <p class="cell-desc">~이러이러한 셀입니다 설명~</p>
+                </a>
                 <a
                     class="cells cell-2"
                     href="./html/cell2.html"
                     title="2번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">2th record</h3>
+                    <p class="cell-desc">
+                        학교 가서 강의 듣고, 과제하고<br />
+                        출근해서 열심히 일하고<br />
+                        24시간이 모자른 하루들 😵‍💫
+                    </p>
+                </a>
                 <a
                     class="cells cell-3"
                     href="./html/cell3.html"
                     title="3번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">3th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
             </section>
 
             <section class="cell-rows row2">
@@ -35,17 +50,33 @@
                     class="cells cell-4"
                     href="./html/cell4.html"
                     title="4번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">4th record</h3>
+                    <p class="cell-desc">
+                        올해 내가 경험한 최고의 맛집들!<br />
+                        또 가고 싶을 정도로 맛있었다 💞
+                    </p>
+                </a>
                 <a
                     class="cells cell-5"
                     href="./html/cell5.html"
                     title="5번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">5th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
                 <a
                     class="cells cell-6"
                     href="./html/cell6.html"
                     title="6번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">6th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
             </section>
 
             <section class="cell-rows row3">
@@ -53,17 +84,32 @@
                     class="cells cell-7"
                     href="./html/cell7.html"
                     title="7번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">7th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
                 <a
                     class="cells cell-8"
                     href="./html/cell8.html"
                     title="8번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">8th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
                 <a
                     class="cells cell-9"
                     href="./html/cell9.html"
                     title="9번째 기록"
-                ></a>
+                >
+                    <h3 class="cell-numb">9th record</h3>
+                    <p class="cell-desc">
+                        ~이러이러한 셀입니다 설명~
+                    </p>
+                </a>
             </section>
         </div>
     </div>
