--- a/html/cell6.html
+++ b/html/cell6.html
@@ -13,10 +13,22 @@
     </a>
 
     <div id="wrap">
+        <img class="ddory" src="../public/ddory.svg">
+
         <section class="records">
             <h3 class="title">
-                Game Records and Results
+                ⚾ Game Records and Results ⚾
             </h3>
+
+            <div class="pangpare">
+                <div class="orange"></div>
+                <div class="spring"></div>
+                <div class="green"></div>
+                <div class="blue"></div>
+                <div class="yellow"></div>
+                <div class="pink"></div>
+            </div>
+
             <div class="record-board">
                 <div class="record record-1">
                     <p class="game">24.nn.nn KT vs @@</p>
@@ -52,10 +64,7 @@
             </div>
         </section>
 
-        <section class="images">
-            <img class="ddory" src="../public/ddory.svg">
-            <img class="vic" src="../public/vic.svg">
-        </section>
+        <img class="vic" src="../public/vic.svg">
     </div>
 
     <!-- Scripts -->
