--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                 >
                     <h3 class="cell-numb">6th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        야구의 묘미에 빠졌다!!<br />
+                        KT WIZ 경기 열심히 보러다님 슝슝
                     </p>
                 </a>
             </section>
