--- a/html/cell6.html
+++ b/html/cell6.html
@@ -42,7 +42,7 @@
                     <p class="game">24.nn.nn KT vs @@</p>
                     <div class="result-box">
                         <div class="box">?</div>
-                        <span class="result">WIN</span>
+                        <span class="result">LOSE</span>
                     </div>
                 </div>
 
