--- a/html/cell5.html
+++ b/html/cell5.html
@@ -13,6 +13,8 @@
     </a>
 
     <div id="wrap">
+        <h3>Fill in the Activity Board</h3>
+
         <section class="board">
             <div class="put put1"></div>
             <div class="put put2"></div>
@@ -20,15 +22,11 @@
             <div class="put put4"></div>
         </section>
 
-        <section class="right-contents">
-            <h3>Fill in the Activity Board</h3>
-
-            <div class="stickers">
-                <div class="sticker sticker1"></div>
-                <div class="sticker sticker2"></div>
-                <div class="sticker sticker3"></div>
-                <div class="sticker sticker4"></div>
-            </div>
+        <section class="stickers">
+            <div class="sticker sticker1"></div>
+            <div class="sticker sticker2"></div>
+            <div class="sticker sticker3"></div>
+            <div class="sticker sticker4"></div>
         </section>
     </div>
 
