--- a/html/cell9.html
+++ b/html/cell9.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYU's 2024</title>
     <link rel="stylesheet" href="../css/general.css">
-    <link rel="stylesheet" href="../css/cell3.css">
+    <style></style>
 </head>
 <body>
+    <!-- Main -->
     <a class="backBtn" href="../index.html" title="돌아가기">
         <img src="../public/back-1.svg" alt="Back">
     </a>
     
     <div id="wrap">
-        
     </div>
+
+    <!-- Scripts -->
+    <script src="../js/cell9.js"></script>
 </body>
 </html>
