--- a/html/cell7.html
+++ b/html/cell7.html
@@ -5,9 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYU's 2024</title>
     <link rel="stylesheet" href="../css/general.css">
-    <link rel="stylesheet" href="../css/cell7.css">
+    <style>
+        #wrap {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 5em;
+        }
+
+        h1 {
+            font-weight: 700;
+            font-size: 3em;
+        }
+
+        .image {
+            width: 15vw;
+            height: 15vw;
+            border: .1em solid #000;
+        }
+
+        .toppings {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            gap: 2em;
+            font-weight: 400;
+            font-size: 2em;
+        }
+
+        .toppings > .left, .right {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            text-align: center;
+            gap: 1em;
+        }
+
+        .topping {
+            padding: .15em;
+            background-color: #a4d1ff55;
+            border-radius: .3em;
+            box-shadow: 0 0 .8em rgba(80, 162, 255, 0.384);
+            cursor: pointer;
+        }
+
+        .select {
+            background-color: #ff45c12e;
+            border-radius: .3em;
+            box-shadow: 0 0 .8em rgba(255, 18, 113, 0.33);
+            cursor: pointer;
+        }
+
+        button {
+            width: 10vw;
+            height: 5vh;
+            border-radius: 1em;
+            font-weight: 400;
+            font-size: .8em;
+            background-color: aliceblue;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: rgba(212, 235, 253, 0.456)
+        }
+    </style>
 </head>
 <body>
+    <!-- Main -->
     <a class="backBtn" href="../index.html" title="돌아가기">
         <img src="../public/back-1.svg" alt="Back">
     </a>
@@ -39,6 +106,38 @@
     </div>
 
     <!-- Scripts -->
-    <script src="../js/cell7.js"></script>
+    <script>
+        const img = document.querySelector('.ice');
+        const btn = document.querySelector('button');
+        const toppings = document.querySelectorAll(".topping");
+
+        // div 선택 css
+        toppings.forEach(topping => {
+            topping.addEventListener('click', () => {
+                topping.classList.toggle('select');
+            });
+        });
+
+        btn.addEventListener('click', () => {
+            const selectedToppings = document.querySelectorAll(".topping.select");
+            const correctToppings = document.querySelectorAll(".topping.correct.select");
+
+            if (selectedToppings.length !== correctToppings.length || correctToppings.length !== 3) {
+                // 1. 선택 토핑수와 정답 토핑 수가 다를 경우
+                // 2. 정답 토핑 수가 3개가 아닐 경우
+                // 오답 처리: 경고창 띄우기
+                alert("이 조합은 내 취향이 아닌 것 같다...ㅜㅡㅜ");
+            } else {
+                // 정답 처리: 이미지 전환
+                img.style.transition = "opacity 0.5s ease";
+                img.style.opacity = 0;
+
+                setTimeout(() => {
+                    img.src = "../public/test2.svg";
+                    img.style.opacity = 1;
+                }, 500);
+            }
+        });
+    </script>
 </body>
 </html>
