--- a/html/cell6.html
+++ b/html/cell6.html
@@ -209,7 +209,7 @@
     </a>
 
     <div id="wrap">
-        <img class="ddory" src="../public/ddory.svg">
+        <img class="ddory" src="../public/ddory.png">
 
         <section class="records">
             <h3 class="title">
@@ -260,7 +260,7 @@
             </div>
         </section>
 
-        <img class="vic" src="../public/vic.svg">
+        <img class="vic" src="../public/vic.png">
     </div>
 
     <!-- Scripts -->
