--- a/index.html
+++ b/index.html
@@ -5,11 +5,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RYU's 2024</title>
     <link rel="stylesheet" href="./css/general.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <style>
+        #wrap {
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .title {
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            gap: 3vw;
+            cursor: default;
+        }
+
+        h1 {
+            padding: 0 .4em;
+            margin-left: -11vw;
+            font-size: 5em;
+            font-weight: 700;
+            background-color: #19914751;
+        }
+
+        .desc {
+            align-items: end;
+            padding: 0 .5em;
+            font-size: 1.8em;
+            font-weight: 400;
+            border-bottom: .1em solid #cecece;
+        }
+
+        span {
+            color: crimson;
+        }
+
+        .cell-rows {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 70%;
+            gap: 50px;
+            margin: 50px auto;
+        }
+
+        a:link, a:hover,
+        a:visited, a:active {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            text-decoration: none;
+            color: #000;
+            font-weight: 400;
+        }
+
+        .cells {
+            flex: 1; /* 동일한 너비 */
+            height: 14vh;
+            padding: 1.8em;
+            border: 1px solid #000;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .cells:hover {
+            flex: 2; /* 너비 넓어짐 */
+        }
+
+        .cell-rows:hover .cells:not(:hover) {
+            flex: 0.8; /* 너비 줄어듦 */
+        }
+
+        .cell-numb {
+            align-items: flex-start;
+            text-align: left;
+            font-size: 2em;
+        }
+
+        .cell-desc {
+            align-items: flex-end;
+            text-align: right;
+            font-size: 1em;
+        }
+    </style>
 </head>
 <body>
     <div id="wrap">
-        <h1>RYU's 2024</h1>
+        <div class="title">
+            <h1>RYU SE's<span>&nbsp; 2024</span></h1>
+
+            <div class="descs">
+                <p class="desc">It is soeunii's 1 year callender</p>
+                <p class="desc">I saved my memories of the year in this place!</p>
+            </div>
+        </div>
 
         <div class="cell-contents">
             <section class="cell-rows row1">
