--- a/html/cell5.html
+++ b/html/cell5.html
@@ -21,6 +21,13 @@
             margin-bottom: 3vh;
         }
 
+        .put, .sticker {
+            display: flex;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+        }
+
         /* Board */
         .board {
             display: flex;
@@ -32,7 +39,7 @@
             width: 45%;
             height: 40vh;
             margin-bottom: 3vh;
-            background-color: #ffc23f;
+            background-color: #ffcf67;
             border-radius: 2em
         }
 
@@ -45,7 +52,7 @@
             width: 5.8vw;
             height: 5.8vw;
             border-radius: 50%;
-            background-color: rgb(255, 255, 255);
+            background-color: #f4d99e;
         }
 
         /* Stickers */
@@ -60,14 +67,14 @@
             width: 4.21vw;
             height: 4.21vw;
             border-radius: 50%;
-            background-color: rgb(255, 172, 205);
+            background-color: orange;
         }
 
         .sticker.goal {
             width: 5.8vw;
             height: 5.8vw;
             border-radius: 50%;
-            background-color: rgb(255, 172, 205);
+            background-color: rgb(137, 255, 78);
         }
     </style>
 </head>
@@ -82,33 +89,33 @@
 
         <section class="board">
             <div class="row">
-                <div class="put put1"></div>
-                <div class="put put2"></div>
-                <div class="put put3"></div>
-                <div class="put put4"></div>
-                <div class="put put5"></div>
+                <div class="put put1">240411<br>엠카운트다운</div>
+                <div class="put put2">240414<br>대면 팬싸인회</div>
+                <div class="put put3">240416<br>더쇼 퇵길아웃</div>
+                <div class="put put4">240420<br>음악중심</div>
+                <div class="put put5">240420<br>대면 팬싸인회</div>
             </div>
             <div class="row">
-                <div class="put put6"></div>
-                <div class="put put7"></div>
-                <div class="put put8"></div>
-                <div class="put put9"></div>
-                <div class="put put10"></div>
+                <div class="put put6">240423<br>더쇼</div>
+                <div class="put put7">240428<br>대면 팬싸인회</div>
+                <div class="put put8">240501<br>쇼챔피언</div>
+                <div class="put put9">240509<br>KT 시구시타</div>
+                <div class="put put10">240523<br>상명대 축제</div>
             </div>
         </section>
 
         <section class="stickers">
-            <div class="sticker sticker1"></div>
-            <div class="sticker sticker2"></div>
-            <div class="sticker sticker3"></div>
-            <div class="sticker sticker4"></div>
-            <div class="sticker sticker5"></div>
+            <div class="sticker sticker1">240411<br>엠카운트다운</div>
+            <div class="sticker sticker2">240414<br>대면 팬싸인회</div>
+            <div class="sticker sticker3">240416<br>더쇼 퇵길아웃</div>
+            <div class="sticker sticker4">240420<br>음악중심</div>
+            <div class="sticker sticker5">240420<br>대면 팬싸인회</div>
 
-            <div class="sticker sticker6"></div>
-            <div class="sticker sticker7"></div>
-            <div class="sticker sticker8"></div>
-            <div class="sticker sticker9"></div>
-            <div class="sticker sticker10"></div>
+            <div class="sticker sticker6">240423<br>더쇼</div>
+            <div class="sticker sticker7">240428<br>대면 팬싸인회</div>
+            <div class="sticker sticker8">240501<br>쇼챔피언</div>
+            <div class="sticker sticker9">240509<br>KT 시구시타</div>
+            <div class="sticker sticker10">240523<br>상명대 축제</div>
         </section>
     </div>
 
