--- a/html/cell7.html
+++ b/html/cell7.html
@@ -22,7 +22,11 @@
         .image {
             width: 15vw;
             height: 15vw;
-            border: .1em solid #000;
+        }
+
+        .ice {
+            width: 15vw;
+            height: 15vw;
         }
 
         .toppings {
@@ -82,7 +86,7 @@
     <div id="wrap">
         <h1>요거트아이스크림 최애 조합을 찾아보자🔎</h1>
         <div class="image">
-            <img class="ice" src="#">
+            <img class="ice" src="../public/box.svg">
         </div>
 
         <section class="toppings">
@@ -133,7 +137,7 @@
                 img.style.opacity = 0;
 
                 setTimeout(() => {
-                    img.src = "../public/test2.svg";
+                    img.src = "../public/cell7.jpg";
                     img.style.opacity = 1;
                 }, 500);
             }
