--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
             height: 14vh;
             padding: 1.8em;
             border: 1px solid #000;
+            background-color: #f1f1f1;
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         .cells:hover {
             flex: 2; /* 너비 넓어짐 */
+            background-color: #e0e0e0;
         }
 
         .cell-rows:hover .cells:not(:hover) {
@@ -129,7 +131,9 @@
                 >
                     <h3 class="cell-numb">3th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        살이 너무 많이 불어났다...!!(＃°Д°)<br>
+                        식단관리 해서 다시 원상복구 시키자 팟팅~!~!!
+                        
                     </p>
                 </a>
             </section>
@@ -153,7 +157,8 @@
                 >
                     <h3 class="cell-numb">5th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        좋아하는 아이돌이 컴백함💗💗<br>
+                        스케줄에 출석해서 활동 스티커를 잔뜩 모았다ㅎㅎ
                     </p>
                 </a>
                 <a
@@ -177,7 +182,8 @@
                 >
                     <h3 class="cell-numb">7th record</h3>
                     <p class="cell-desc">
-                        ~이러이러한 셀입니다 설명~
+                        요거트아이스크림에 좋아하는 토핑을<br>
+                        잔뜩 추가해 먹는 건 너무 맛있어😋🍨
                     </p>
                 </a>
                 <a
