--- a/html/cell4.html
+++ b/html/cell4.html
@@ -41,7 +41,7 @@
             text-align: center;
 
             font-weight: 400;
-            font-size: 2em;
+            font-size: 1.7em;
         }
 
         .cards {
@@ -56,7 +56,7 @@
         .flip {
             position: relative;
             width: 250px;
-            height: 300px;
+            height: 333px;
             transition: all .7s ease-in-out;
             transform-style: preserve-3d;
         }
@@ -79,23 +79,27 @@
         }
 
         .front {
-            background: rgb(217, 217, 217);
+            background: rgb(119, 148, 175);
         }
 
-        .back1, .back2, .back3 {
+        .back1, .back2, .back3, .back4 {
             transform: rotateY(180deg) translate3d(0, 0, 3px);
         }
 
         .back1 {
-            background: url("img/card1.png");
+            background: url("../public/card1.jpg");
         }
 
         .back2 {
-            background: url("img/card2.png");
+            background: url("../public/card2.jpg");
         }
 
         .back3 {
-            background: url("img/card3.png");
+            background: url("../public/card3.jpg");
+        }
+
+        .back4 {
+            background: url("../public/card4.jpg");
         }
     </style>
 </head>
@@ -114,26 +118,26 @@
         <section class="cards">
             <ul class="card-1">
                 <li class="flip">
-                    <div class="front">one</div>
+                    <div class="front">?</div>
                     <div class="back1"></div>
                 </li>
             </ul>
             <ul class="card-2">
                 <li class="flip">
-                    <div class="front">two</div>
+                    <div class="front">?</div>
                     <div class="back2"></div>
                 </li>
             </ul>
             <ul class="card-3">
                 <li class="flip">
-                    <div class="front">three</div>
+                    <div class="front">?</div>
                     <div class="back3"></div>
                 </li>
             </ul>
             <ul class="card-4">
                 <li class="flip">
-                    <div class="front">four</div>
-                    <div class="back3"></div>
+                    <div class="front">?</div>
+                    <div class="back4"></div>
                 </li>
             </ul>
         </section>
@@ -144,10 +148,10 @@
         const content = document.querySelector("p");
         const cards = document.querySelectorAll("ul");
         const cardTxt = {
-            "card-1": "식당이름1 | 위치 | 메뉴 <br /> Date.  With.",
-            "card-2": "식당이름2 | 위치 | 메뉴 <br /> Date.  With.",
-            "card-3": "식당이름3 | 위치 | 메뉴 <br /> Date.  With.",
-            "card-4": "식당이름4 | 위치 | 메뉴 <br /> Date.  With.",
+            "card-1": "타오마라탕 | 합정 | 마라탕, 위미라 <br /> Date. 240407   With. 애진이, 연재, 옘웅니",
+            "card-2": "야상해 | 이태원 | 만두, 동파육 <br /> Date. 240621  With. 현희",
+            "card-3": "원잇투 | 대전 | 꿈돌이 산도 <br /> Date. 241001  With. 옘웅니, 쩡웅니, 현희",
+            "card-4": "후발대 | 잠실새내 | 생고기 <br /> Date. 241201  With. 지연엉니, 세리미",
         };
 
         cards.forEach((card) => {
